methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:2: error: identifier expected but '=' found.
def move(nbPas: Int,versLAvant: Boolean) : ={ 
                                           ^